--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
                 <h2 class="text-center my-2">Les Figurines</h2>
 
                 <div class="d-flex justify-content-center p-3">
-                    <input type="text" placeholder="La figurine que je veux" name="search" [{ngModel}]="search">
+                    <input type="text" placeholder="La figurine que je veux" name="search" [{ngModule}]="search">
             
 
                     <button class="btn" (click)="inverseorderby()">{{getorderby()}}</button>
