--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,8 @@
-<div>
+<div class="social">
 
-    <a href="https://facebook.com" target="_blank"><img src="assets/icons/facebook.png"
-alt=""></a>
+    <a href="https://instagram.com" target="_blank"><img src="/assets/icons/instagram.png"alt=""></a>
 
-    <a href="https://instagram.com" target="_blank"><img src="assets/icons/instagram.png"
-alt=""></a>
-
-    <a href="https://x.com" target="_blank"><img src="assets/icons/x.png"
-alt=""></a>
+    <a href="https://x.com" target="_blank"><img src="/assets/icons/logos.png"alt=""></a>
 
 </div>
+
