--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,8 @@
-
-<div>
-
-  <a routerLink="/" class="titre"><h1>Au Petit Village</h1></a>
-
-</div>
-
-<div>
-
-  <ul class="navbar-nav">
+<div class="container">
+  
+  
+  <ul class="nav navbar-nav">
+    
 
     <li class="nav-item">
 
@@ -26,7 +21,7 @@
 
     </li>
   </ul>
-
+  <div class="img">
+    <img class="imgage" src="Logo_au petit village.jpg" alt="">
+  </div> 
 </div>
-
-
