--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <main>
 
     <div class="home">
-
+        <h1>Au Petit Village</h1>
         <section class="container presentation p-3">
 
             <p class="d-flex justify-content-center text-center mx-auto p-4 border border-black rounded">L'entreprise Au petit village est spécialisée dans la création de figurine. <br>
@@ -37,7 +37,7 @@
 
                                 <h3 class="card-title text-center">{{figurine.name}}</h3>
 
-                                <img src="{{figurine.image}}" class="card-img-center align-self-center" alt="">
+                                <img src='{{figurine.image}}' class="card-img-center align-self-center" alt="">
 
                                 <div class="card-body text-center">
 
