--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,9 +6,9 @@
 
         <form>
 
-            <div>
+            <div class="form">
 
-                <label for="name">Nom</label>
+                <label for="name">Nom</label><br>
 
                 <input type="text" name="name" id="name" 
 placeholder="Votre nom" required>
@@ -17,7 +17,7 @@ placeholder="Votre nom" required>
 
             <div>
 
-                <label for="object">Sujet</label>
+                <label for="object">Sujet</label><br>
 
                 <input type="text" name="sujet" id="object" 
 placeholder="Le sujet de votre message" required>
@@ -26,7 +26,7 @@ placeholder="Le sujet de votre message" required>
 
             <div>
 
-                <label for="message">Message</label>
+                <label for="message">Message</label><br>
 
                 <textarea id="message" name="message" rows="5"
 cols="33" placeholder="Votre message" required>
