--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,9 @@
 <div class="social">
 
-    <a href="https://instagram.com" target="_blank"><img src="/assets/icons/instagram.png"alt=""></a>
+    <a href="https://instagram.com" target="_blank"><img src="instagram.png"alt=""></a>
 
-    <a href="https://x.com" target="_blank"><img src="/assets/icons/logos.png"alt=""></a>
+    <a href="https://x.com" target="_blank"><img src="logos.png"alt=""></a>
+
 
 </div>
 
