--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -4,11 +4,18 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    margin-top: 0;
     
 }
 .social img {
     height: 50px;
     width: 50px;
     margin: 5px;
+    background-color: none;
+}
+.social a {
+    background: none;
+    text-decoration: none;
+
 
 }
