--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -6,17 +6,15 @@
         <div *ngIf="figurine mx-auto">
 
             <h1>{{figurine.name}}</h1>
-
-                <img [src]="figurine.image" alt="img" 
-class="rounded mx-auto border border-black">
-
-            <div class="text-center text">
-
-                <p>{{figurine.description}}</p>
-                <p>Prix : {{figurine.prix}}</p>
-
+            <div class="fiche">
+                    <img [src]="figurine.image" alt="img" >
+                    <div id="fiche">
+                        <p>{{figurine.description}}</p>
+                        
+                    </div>
+                    
             </div>
-
+            <p style="text-align: center;">Prix : {{figurine.prix}}</p>
         </div>
 
     </section>
